--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
+    # - run: npm run build --if-present
     # - run: npm test
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
